# agent_app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  agent claude code  prompt.md  docker-compose.yml  findings.md  nixpacks.toml  package-lock.json  package.json  pencil-new.pen  progress.md  task_plan.md  test_components.py  开发工作流.md  开发流程.md
.github/workflows/: ci-cd.yml
.project-state/: current-phase.json  project-type.json  session-history.json  task-status.json
.serena/: project.yml
.superpowers/brainstorm/31714-1774418425/: .server-stopped  arch-components.html  design-overview.html  modules-detail.html
backend/: .env.example  .flake8  Dockerfile  coverage.json  coverage.xml  pyproject.toml  requirements.txt
backend/api/middleware/: database.py
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: context.py  executor.py  finish_handler.py  langchain_engine.py
backend/app/agent/middleware/: __init__.py  hil.py  memory.py  summarization.py  tool_execution.py  tool_policy.py  trace.py
backend/app/api/: chat.py  context.py  main.py  preferences.py  skills.py
backend/app/api/routes/: chat.py  sessions.py  skills.py
backend/app/core/: config.py  logger.py
backend/app/db/: connection.py  models.py  postgres.py  queries.py
backend/app/llm/: factory.py
backend/app/logger/: README.md  __init__.py  config.py  examples.py  formatter.py
backend/app/logger/modules/: agent.py  api.py  base.py  context.py  memory.py  skills.py  sse.py  tools.py
backend/app/memory/: manager.py  processors.py  schemas.py
backend/app/middleware/: memory.py
backend/app/observability/: events.py  interrupt_store.py  trace_block.py  trace_events.py
backend/app/planner/: __init__.py  orchestrator.py
backend/app/prompt/: __init__.py  budget.py  builder.py  internal.py  slot_tracker.py  templates.py
backend/app/skills/: __init__.py  manager.py  models.py
backend/app/tools/: __init__.py  _url_safety.py  base.py  builtin.py  csv_analyze.py  fetch.py  file.py  idempotency.py  manager.py  policy.py  registry.py  search.py  send_email.py  token.py
backend/app/tools/readonly/: skill_loader.py
backend/app/utils/: token.py
backend/db/: __init__.py  connection.py  models.py  queries.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_api.py  test_context_api.py  test_database.py  test_skills_api.py
backend/tests/unit/: test_main.py  test_memory_middleware.py
backend/tests/unit/agent/: test_finish_handler.py  test_langchain_engine.py  test_middleware.py  test_summarization_middleware.py
backend/tests/unit/api/: test_chat.py  test_context.py  test_skills.py
backend/tests/unit/config/: test_settings.py
backend/tests/unit/db/: test_postgres.py
backend/tests/unit/llm/: test_factory.py
backend/tests/unit/tools/: test_csv_analyze.py  test_registry.py  test_search.py  test_send_email.py
design-system/multi-tool-ai-agent/: MASTER.md
design-system/multi-tool-ai-agent/pages/: home.md
docs/: Memory 模块架构设计文档 v5.md  Memory-v5-节点-Prompt-Token对照.md  Multi-Tool AI Agent 完整架构设计文档 v13.md  TESTING_RESULTS.md  database-review-and-optimization-recommendations.md  logging-completion-report.md  logging-design.md  logging-final-completion-report.md  logging-implementation-summary.md  testing-strategy.md  个人简历.md
docs/arch/: agent-v13.md  memory-v5.md  prompt-context-v20.md  skill-v3.md  tool-system-v1-ascii.md  tools-v12.md
docs/back-md/:  Memory 模块架构设计文档 v4.md  Agent Executor.md  api_reference.md  langchain-langgraph-comparison-analysis.md
docs/design/: assistant-ui-redesign.md  quick-start.md
docs/implementation/: TASK_LIST.md  phase10-context-window-panel.md
docs/legacy/: 2026-03-20-multi-tool-agent-design.md  Prompt + Context 模块完整设计文档.md  agent skills.md  design-pencil-agent-ui.md  design-system-agent-web.md
docs/legacy/implementation/: TASK_LIST.md  backend-implementation-plan.md  frontend-implementation-plan.md  product-requirements.md  prompt-context-module-design.md
docs/plans/: README.md  STYLE_UPGRADE_PLAN.md  plan-phase01-db-setup.md  plan-phase02-skill-manager.md  plan-phase03-memory.md  plan-phase04-agent-core.md  plan-phase05-prompt.md  plan-phase06-tools.md  plan-phase07-api.md  plan-phase08-frontend-layout.md  plan-phase09-react-trace.md  plan-phase10-context-window.md  plan-phase11-skills-ui.md  plan-phase12-hil.md  plan-phase13-e2e-tests.md  plan-phase14-slot-token-stats.md  plan-phase15-assistant-ui-redesign.md  plan-phase16-tool-system-review-fixes.md  plan-phase21-hil-resume-reliability.md  plan-phase23-task-orchestration.md
docs/review/: p0-p1-fix-completion-report.md  plan-vs-implementation-report.md  project-completion-report.md  tool-system-review-2026-03-24.md  tools-architecture-review-2026-03-23.md  tools-gap-analysis-and-dev-prompt.md
docs/reviews/: tool-system-implementation-review.md
docs/superpowers/: database-implementation-plan.md
frontend/: .eslintrc.js  Dockerfile  next.config.ts  package-lock.json  package.json  pencil-new.pen  playwright.config.ts  sse-manager-api-reference.md  sse-manager-enhancement-summary.md  tailwind.config.assistant-ui.js  tailwind.config.ts  vitest.config.ts
planning-with-files/: findings.md  progress.md  task_plan.md
scripts/: backup-db.sh  dev.sh  init_db.py  restore-db.sh
skills/: README.md
skills/csv-reporter/: SKILL.md
skills/legal-search/: SKILL.md
skills/template/: SKILL.md
supabase/migrations/: 001_agent_traces.sql  001_initial_schema.sql  002_create_users_and_sessions.sql  003_add_constraints.sql  004_add_indexes.sql  005_enable_rls.sql
tests/: README.md  vitest.config.ts
tests/backend/: conftest.py
tests/components/: ConfirmModal.test.tsx  SessionGrantStrip.test.tsx
tests/db/: test_schema.py
tests/e2e/: 01-chat-basic.spec.ts  02-multi-turn.spec.ts  03-tool-trace.spec.ts  04-sse-streaming.spec.ts  05-hil-interrupt.spec.ts  06-context-window.spec.ts  07-skills-panel.spec.ts  08-slot-details.spec.ts  09-tool-serial.spec.ts  10-tool-parallel.spec.ts  11-hil-trigger.spec.ts  helpers.ts
tests/test/: setup.ts
(+153 files in other folders)
