[project]
name = "multi-tool-agent"
version = "0.1.0"
description = "Multi-Tool AI Agent Backend"
authors = [
    {name = "AI Agent Team"}
]
requires-python = ">=3.11"
dependencies = [
    # Core Framework (Latest verified on 2026-03-27)
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # LangChain & LangGraph (Latest verified on 2026-03-27)
    # Keep minor upper-bounds to reduce unexpected breaking changes.
    "langchain>=1.2.13,<1.3.0",
    "langchain-core>=1.2.22,<1.3.0",
    "langgraph>=1.1.3,<1.2.0",
    "langchain-ollama>=1.0.1,<2.0.0",
    "langchain-openai>=1.1.12,<1.2.0",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-anthropic>=1.4.0,<2.0.0",

    # PostgreSQL (psycopg3 - NOT asyncpg, NOT psycopg2)
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "langgraph-checkpoint-postgres>=3.0.5,<4.0.0",

    # Tools API
    "tavily-python>=0.5.0",

    # Utilities
    "tiktoken>=0.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",

    # Code Quality
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ────────────────────────────────────────────────────────────────────────────────
# pytest Configuration
# ────────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_auto_default_fixture_loop_scope = true

addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",  # P0 要求 80% 覆盖率
]

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, API)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow-running tests",
    "requires_db: Tests requiring database connection",
    "requires_llm: Tests requiring LLM API (may incur costs)",
    "requires_api_key: Tests requiring external API keys",
]

# ────────────────────────────────────────────────────────────────────────────────
# Coverage Configuration
# ────────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "# type: ignore",
]

[tool.coverage.html]
directory = "htmlcov"

# ────────────────────────────────────────────────────────────────────────────────
# Black Configuration
# ────────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

# ────────────────────────────────────────────────────────────────────────────────
# Ruff Configuration
# ────────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented out code)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "ARG001", # unused function argument (common in tests/fixtures)
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",   # unused arguments are common in test fixtures
    "S101",  # assert allowed in tests
    "PLR2004", # magic values allowed in tests
]

"__init__.py" = [
    "F401", # unused imports allowed in __init__.py
]

# ────────────────────────────────────────────────────────────────────────────────
# MyPy Configuration
# ────────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "migrations/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
